--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "RenanSOliveira\\Permissions\\": "src/"
+            "PermissionPlus\\Permission\\": "src/"
         }
     },
     "authors": [
